navbar and footer

--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,22 @@
-<p>navbar works!</p>
+<div class="contdegradado"></div>
+<nav class="p-0 navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand pc" routerLink=""><img src="../../../assets/logo_femseapto.png" alt="Logo_Femseapto"
+                width="60"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-start" id="navbarNavAltMarkup">
+            <div class="navbar-nav flex-grow-1">
+                <a class="nav-link btn btn-outline-warning" aria-current="page" routerLink="">Inicio</a>
+                <a class="nav-link btn btn-outline-warning" routerLink="">Servicios</a>
+                <a class="nav-link btn btn-outline-warning" routerLink="">Convenios</a>
+                <a class="nav-link btn btn-outline-warning" routerLink="">Sobre nosotros</a>
+            </div>
+            <div class="navbar-nav">
+                <a class="nav-link btn btn-outline-warning" routerLink="" >LOGIN</a>
+            </div>
+        </div>
+    </div>
+</nav>
