--- a/front/src/app/components/footer/footer.component.html
+++ b/front/src/app/components/footer/footer.component.html
@@ -1,1 +1,71 @@
-<p>footer works!</p>
+<div class="container text-center">
+        <footer class="py-5">
+                <div class="row">
+                        <div class="col-12 col-md">
+                                <a href="/"
+                                        class="d-flex justify-content-center align-items-center mb-3 link-dark text-decoration-none">
+                                        <img src="../../../assets/logo_showcase.png" alt="" width="220px">
+                                </a>
+                        </div>
+                        <div class="col-12 col-md">
+                                <h5> <i class="bi bi-rulers"></i> Normatividad</h5>
+                                <ul class="nav flex-column">
+                                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i
+                                                                class="bi bi-forward-fill"></i> Politica de tratamiento
+                                                        de datos</a>
+                                        </li>
+                                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i
+                                                                class="bi bi-forward-fill"></i> Sarlaft</a></li>
+                                </ul>
+                        </div>
+                        <div class="col-12 col-md">
+                                <h5><i class="bi bi-mailbox2"></i> Contacto</h5>
+                                <ul class="nav flex-column">
+                                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Móvil: +57
+                                                        321 403 0957 -
+                                                        321 385 6420</a></li>
+                                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">E-mail:
+                                                        femseapto&#64;ganagana.com.co</a></li>
+                                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">PBX: +57
+                                                        (8) 261 0014 -
+                                                        Ext: 150</a></li>
+                                </ul>
+                        </div>
+                </div>
+                <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+                        <p>&copy; {{ currentYear }} Fondo de empleados de Seapto S.A.</p>
+                        <ul class="list-unstyled d-flex footer-links">
+                                <li class="ms-3">
+                                        <a class="link-body-emphasis"
+                                        href="https://www.tiktok.com/@ganaganaoficial" target="_blank">
+                                                <i class="bi bi-tiktok"></i>
+                                        </a>
+                                </li>
+                                <li class="ms-3">
+                                        <a class="link-body-emphasis"
+                                        href="https://www.facebook.com/ganaganaoficial" target="_blank">
+                                                <i class="bi bi-facebook"></i>
+                                        </a>
+                                </li>
+                                <li class="ms-3">
+                                        <a class="link-body-emphasis"
+                                        href="https://www.instagram.com/ganaganaoficial" target="_blank">
+                                        <i class="bi bi-instagram"></i>
+                                        </a>
+                                </li>
+                                <li class="ms-3">
+                                        <a class="link-body-emphasis"
+                                        href="https://twitter.com/ganaganaoficial" target="_blank">
+                                        <i class="bi bi-twitter-x"></i>
+                                        </a>
+                                </li>
+                                <li class="ms-3">
+                                        <a class="link-body-emphasis"
+                                        href="https://youtube.com/@GanaGanaOficial?si=ev-dia3SmDGGOpsd" target="_blank">
+                                                <i class="bi bi-youtube"></i>
+                                        </a>
+                                </li>
+                        </ul>
+                </div>
+        </footer>
+</div>
