--- a/front/src/app/components/footer/footer.component.html
+++ b/front/src/app/components/footer/footer.component.html
@@ -33,7 +33,7 @@
                         </div>
                 </div>
                 <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-                        <p>&copy; {{ currentYear }} Fondo de empleados de Seapto S.A.</p>
+                        <p>&copy; {{ currentYear }} Fondo de empleados de Seapto S.A. - FEMSEAPTO. </p>
                         <ul class="list-unstyled d-flex footer-links">
                                 <li class="ms-3">
                                         <a class="link-body-emphasis"
