--- a/front/src/app/components/login/login.component.html
+++ b/front/src/app/components/login/login.component.html
@@ -1,1 +1,15 @@
-<p>login works!</p>
+<div class="container mt-5 mb-5 text-center">
+  <div class="card">
+    <h1 class="mt-3">Bienvenidos a femseapto</h1>
+    <div class="card-body">
+        <div class="form-floating mt-3 mb-3 input-container">
+            <input type="email" class="form-control small-input" id="floatingInput" placeholder="usuario">
+            <label for="floatingInput">Usuario</label>
+          </div>
+          <div class="form-floating mt-3 mb-3 input-container">
+            <input type="password" class="form-control small-input" id="floatingPassword" placeholder="Password">
+            <label for="floatingPassword">Contraseña</label>
+          </div>
+        </div>
+  </div>
+</div>
