--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -10,12 +10,12 @@
         <div class="collapse navbar-collapse justify-content-start" id="navbarNavAltMarkup">
             <div class="navbar-nav flex-grow-1">
                 <a class="nav-link btn btn-outline-warning" aria-current="page" routerLink="">Inicio</a>
-                <a class="nav-link btn btn-outline-warning" routerLink="">Servicios</a>
-                <a class="nav-link btn btn-outline-warning" routerLink="">Convenios</a>
-                <a class="nav-link btn btn-outline-warning" routerLink="">Sobre nosotros</a>
+                <a class="nav-link btn btn-outline-warning" routerLink="/services">Servicios</a>
+                <a class="nav-link btn btn-outline-warning" routerLink="/agreements">Convenios</a>
+                <a class="nav-link btn btn-outline-warning" routerLink="/about">Sobre nosotros</a>
             </div>
             <div class="navbar-nav">
-                <a class="nav-link btn btn-outline-warning" routerLink="" >LOGIN</a>
+                <a class="nav-link btn btn-outline-warning" routerLink="/login" >LOGIN</a>
             </div>
         </div>
     </div>
