--- a/front/src/app/components/home/components/carousel/carousel.component.html
+++ b/front/src/app/components/home/components/carousel/carousel.component.html
@@ -1,11 +1,8 @@
-<p-carousel [value]="products" [numVisible]="1" [numScroll]="1">
-    <ng-template let-product pTemplate="item">
-        <div class="product-item">
-            <div class="product-item-content">
-                <div class="mb-3">
-                    <img [src]="product.imageSrc" class="product-image" />
-                </div>
-            </div>
-        </div>
-    </ng-template>
+<p-carousel [value]="images" [numVisible]="1" [numScroll]="1" [circular]="true" [autoplayInterval]="4000"
+[showIndicators]="false" [showNavigators]="false">
+  <ng-template pTemplate="item" let-item>
+    <div class="image-container mb-1">
+      <img class="img-fluid rounded-start w-100" [src]="item.previewImageSrc">
+    </div>
+  </ng-template>
 </p-carousel>
