--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,4 @@
-<div class="contdegradado"></div>
-<nav class="p-0 navbar navbar-expand-lg navbar-light bg-light">
+<nav class="p-0 navbar navbar-expand-lg">
     <div class="container-fluid">
         <a class="navbar-brand pc" routerLink=""><img src="../../../assets/logo_femseapto.png" alt="Logo_Femseapto"
                 width="60"></a>
