--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -6,3 +6,14 @@ html {
   font-family: "Inter", sans-serif !important;
   font-size: large;
 }
+app-navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  background: rgba(119, 119, 119, 0.207);
+}
+
+body {
+  padding-top: 70px;
+}
