--- a/front/src/app/components/login/login.component.html
+++ b/front/src/app/components/login/login.component.html
@@ -1,15 +1,30 @@
-<div class="container mt-5 mb-5 text-center">
-  <div class="card">
-    <h1 class="mt-3">Bienvenidos a femseapto</h1>
-    <div class="card-body">
-        <div class="form-floating mt-3 mb-3 input-container">
-            <input type="email" class="form-control small-input" id="floatingInput" placeholder="usuario">
-            <label for="floatingInput">Usuario</label>
-          </div>
-          <div class="form-floating mt-3 mb-3 input-container">
-            <input type="password" class="form-control small-input" id="floatingPassword" placeholder="Password">
-            <label for="floatingPassword">Contraseña</label>
+<div class="container mt-5">
+  <div class="d-flex justify-content-center">
+    <div class="card mb-3" style="max-width: 600px;">
+      <div class="row g-0">
+        <div class="col-md-4">
+          <ng-lottie class="animacion" [options]="options" width="200px"></ng-lottie>
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title text-center">Inicia Sesión</h5>
+            <form class="row g-3">
+              <div class="col-md-12">
+                <label class="form-label">Usuario</label>
+                <input type="email" class="form-control">
+              </div>
+              <div class="col-md-12">
+                <label class="form-label">Contraseña</label>
+                <input type="password" class="form-control">
+              </div>
+              <div class="col-md-12">
+                <button type="submit" class="btn btn-primary">Ingresar</button>
+              </div>
+            </form>
+
           </div>
         </div>
+      </div>
+    </div>
   </div>
 </div>
