--- a/front/src/app/components/footer/footer.component.html
+++ b/front/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="container text-center">
-        <footer class="py-5">
+        <footer class="mt-5">
                 <div class="row">
                         <div class="col-12 col-md">
                                 <a href="/"
