--- a/front/src/app/components/home/components/saving-service-home/saving-service-home.component.css
+++ b/front/src/app/components/home/components/saving-service-home/saving-service-home.component.css
@@ -1,10 +1,16 @@
+.background-image {
+    background-image: url('../../../../../assets/ahorroExtraordinario.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
 .card-header {
-    max-height: 300px; /* Ajusta esto según la altura deseada */
-    overflow: hidden; /* Oculta cualquier parte de la imagen que se desborde */
+    max-height: 300px;
+    overflow: hidden; 
 }
 
 .card-header img {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Cubre completamente el espacio, podría recortar partes de la imagen */
+    object-fit: cover; 
 }
