Cambios en componentes

--- a/front/src/app/components/login/login.component.html
+++ b/front/src/app/components/login/login.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title text-center">Inicia Sesión</h5>
+            <h5 class="card-title text-center">Iniciar Sesión</h5>
             <form class="row g-3">
               <div class="col-md-12">
                 <label class="form-label">Usuario</label>
