--- a/front/src/app/components/home/components/carousel/carousel.component.html
+++ b/front/src/app/components/home/components/carousel/carousel.component.html
@@ -1,4 +1,4 @@
-<p-carousel [value]="images" [numVisible]="1" [numScroll]="1" [circular]="true" [autoplayInterval]="4000"
+<p-carousel [value]="activeImages" [numVisible]="1" [numScroll]="1" [circular]="true" [autoplayInterval]="4000"
 [showIndicators]="false" [showNavigators]="false">
   <ng-template pTemplate="item" let-item>
     <div class="image-container">
