--- a/front/src/app/components/welcome/welcome.component.html
+++ b/front/src/app/components/welcome/welcome.component.html
@@ -1,1 +1,55 @@
-<p>welcome works!</p>
+<div class="container text-center content-animate">
+    <h1 class="mt-5">Bienvenido a FemSeapto</h1>
+    <p class="lead">PRUEBA</p>
+</div>
+
+<div class="container mt-2 content-animate">
+    <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-3">
+            <div class="card text-center">
+                <div class="card-header">
+                    Mi Perfil
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Actualizar mis datos personales</h5>
+                    <a href="#/admin/actualizar" class="btn btn-primary">Ver más</a>
+                </div>
+
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-3">
+            <div class="card text-center">
+                <div class="card-header">
+                    Servicios de ahorro
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Conoce los servicios de ahorro</h5>
+                    <a href="#/Servicios/List" class="btn btn-primary">Ver más</a>
+                </div>
+
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-3">
+            <div class="card text-center">
+                <div class="card-header">
+                    Servicios de credito
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Conoce los servicios de credito</h5>
+                    <a href="#/Creditos/List" class="btn btn-primary">Ver más</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-3">
+            <div class="card text-center">
+                <div class="card-header">
+                    ¿Quienes Somos?
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Conoce mas sobre FemSeapto</h5>
+                    <a href="#/Quienes-somos" class="btn btn-primary">Ver más</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
