--- a/front/src/app/components/navbar/navbar.component.css
+++ b/front/src/app/components/navbar/navbar.component.css
@@ -1,5 +1,5 @@
 nav {
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(255,214,16, 0.5);
     backdrop-filter: blur(10px);
   position: fixed;
   top: 0;
@@ -45,5 +45,9 @@ i {
   .dropdown-menu {
     background: none;
     border: none;
+  }
+
+  .container-fluid{
+    padding: 13px;
   }
 }
