navbar with auth updated

--- a/front/src/app/components/login/login.component.html
+++ b/front/src/app/components/login/login.component.html
@@ -18,7 +18,7 @@
                 <input type="password" class="form-control" [(ngModel)]="contrasenia" name="contrasenia">
               </div>
               <div class="col-md-12">
-                <button type="submit" class="btn btn-primary">Ingresar</button>
+                <button routerLink="/welcome" type="submit" class="btn btn-primary">Ingresar</button>
               </div>
             </form>
 
