--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -27,8 +27,11 @@
                 </li>
             </div>
             <div class="navbar-nav">
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="!isAuthenticated">
                     <a class="nav-link btn btn-outline-warning" (click)="closeMenu()" routerLink="/login">Iniciar Sesión</a>
+                </li>
+                <li class="nav-item" *ngIf="isAuthenticated">
+                    <a class="nav-link btn btn-outline-warning" (click)="logout()" (click)="closeMenu()">Cerrar Sesión</a>
                 </li>
             </div>
         </div>
