--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -25,6 +25,9 @@
                 <li class="nav-item">
                     <a class="nav-link btn btn-outline-warning" (click)="closeMenu()" routerLink="/about">Sobre Nosotros</a>
                 </li>
+                <li class="nav-item" *ngIf="isAuthenticated">
+                    <a class="nav-link btn btn-outline-warning" (click)="closeMenu()" routerLink="/welcome">Mi perfil</a>
+                </li>
             </div>
             <div class="navbar-nav">
                 <li class="nav-item" *ngIf="!isAuthenticated">
