User info in welcome page

--- a/front/src/app/components/welcome/welcome.component.html
+++ b/front/src/app/components/welcome/welcome.component.html
@@ -1,6 +1,6 @@
 <div class="container text-center content-animate">
     <h1 class="mt-5">Bienvenido a FemSeapto</h1>
-    <p class="lead">PRUEBA</p>
+    <p class="lead">{{ userInfo?.nombres }} {{ userInfo?.primerApellido }} {{ userInfo?.segundoApellido }} </p>
 </div>
 
 <div class="container mt-2 content-animate">
