--- a/front/src/app/components/footer/footer.component.html
+++ b/front/src/app/components/footer/footer.component.html
@@ -33,7 +33,7 @@
                         </div>
                 </div>
                 <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-                        <p>&copy; {{ currentYear }} Fondo de empleados de Seapto S.A. - FEMSEAPTO. </p>
+                        <p>&copy; {{ currentYear }} Grupo de Desarrollo SEAPTO S.A.</p> <!--Fondo de empleados de Seapto S.A. - FEMSEAPTO.-->
                         <ul class="list-unstyled d-flex footer-links">
                                 <li class="ms-3">
                                         <a class="link-body-emphasis"
@@ -50,13 +50,13 @@
                                 <li class="ms-3">
                                         <a class="link-body-emphasis"
                                         href="https://www.instagram.com/ganaganaoficial" target="_blank">
-                                        <i class="bi bi-instagram"></i>
+                                                <i class="bi bi-instagram"></i>
                                         </a>
                                 </li>
                                 <li class="ms-3">
                                         <a class="link-body-emphasis"
                                         href="https://twitter.com/ganaganaoficial" target="_blank">
-                                        <i class="bi bi-twitter-x"></i>
+                                                <i class="bi bi-twitter-x"></i>
                                         </a>
                                 </li>
                                 <li class="ms-3">
