--- a/front/src/app/components/welcome/welcome.component.html
+++ b/front/src/app/components/welcome/welcome.component.html
@@ -12,7 +12,7 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">Actualizar mis datos personales</h5>
-                    <a href="#/admin/actualizar" class="btn btn-primary">Ver más</a>
+                    <a class="btn btn-primary" routerLink="/services/savings">Ver más</a>
                 </div>
 
             </div>
@@ -24,7 +24,7 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">Conoce los servicios de ahorro</h5>
-                    <a href="#/Servicios/List" class="btn btn-primary">Ver más</a>
+                    <a class="btn btn-primary" routerLink="/services/savings">Ver más</a>
                 </div>
 
             </div>
@@ -36,7 +36,7 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">Conoce los servicios de credito</h5>
-                    <a href="#/Creditos/List" class="btn btn-primary">Ver más</a>
+                    <a class="btn btn-primary" routerLink="/services/savings">Ver más</a>
                 </div>
             </div>
         </div>
@@ -47,7 +47,7 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">Conoce mas sobre FemSeapto</h5>
-                    <a href="#/Quienes-somos" class="btn btn-primary">Ver más</a>
+                    <a class="btn btn-primary" routerLink="/services/savings">Ver más</a>
                 </div>
             </div>
         </div>
