--- a/front/src/app/components/home/components/saving-service-home/saving-service-home.component.css
+++ b/front/src/app/components/home/components/saving-service-home/saving-service-home.component.css
@@ -1,16 +1,22 @@
-.background-image {
-    background-image: url('../../../../../assets/ahorroExtraordinario.jpg');
-    background-size: cover;
-    background-position: center;
-}
-
-.card-header {
-    max-height: 300px;
-    overflow: hidden; 
-}
-
-.card-header img {
+.fondo {
+    position: relative;
     width: 100%;
-    height: 100%;
-    object-fit: cover; 
+    height: 100vh;
+}
+
+.fondo:before {
+    content: ' ';
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    opacity: 0.6;
+    background-image: url('../../../../../assets/ahorroExtraordinario.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.card {
+    width: 20rem;
+    background-color: transparent;
 }
