--- a/front/src/app/components/home/components/saving-service-home/saving-service-home.component.html
+++ b/front/src/app/components/home/components/saving-service-home/saving-service-home.component.html
@@ -1,62 +1,13 @@
-<div class="background-image">
+<div class="fondo">
     <div class="container">
-        <div class="row align-items-start">
-            <!-- CARD DE INFO -->
-            <div class="col-md-12">
-                <div class="card text-center mt-3 shadow">
-                    <div class="card-header">
-                        <h3>¡Conoce nuestros servicios de ahorro!</h3>
-                    </div>
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-6">
-                                LISTA DE SERVICIOS
-                            </div>
-                            <p-divider layout="vertical" />
-                            <div class="col-md-6">
-                            </div>
-                        </div>
-                        <h5 class="mt-3">Ahorra y prográmate libremente para que cumplas tus sueños.</h5>
-                    </div>
+        <div class="container pt-5 d-flex justify-content-end">
+            <div class="card">
+                <div class="card-body">
+                  <h1 class="card-title">Ahorros</h1>
+                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem obcaecati exercitationem voluptatibus doloremque maiores natus rerum beatae fugit earum, tempore aliquid molestiae facere ex! Velit quaerat provident ex illo dolor!</p>
+                  <a class="btn btn-primary" routerLink="services/savings">Conocer más</a>
                 </div>
-            </div>
-
-            <div class="col-md-6">
-                <div class="card text-center mt-3 shadow">
-                    <div class="card-header p-0">
-                        <a href="">
-                            <img src="../../../../../assets/ahorroExtraordinario.jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="card-body">
-
-                        <h5>Ahorra y prográmate libremente para que cumplas tus sueños.</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="card text-center mt-3">
-                    <div class="card-header">
-                        <h2>Buenas tardes</h2>
-                    </div>
-                    <div class="card-body">
-                        <h2>Buenas tardes</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="card text-center mt-3">
-                    <div class="card-header">
-                        <h2>Ahorro Extraordinario</h2>
-                    </div>
-                    <div class="card-body">
-                        <a href="">
-                            <img src="" alt="">
-                        </a>
-                        <h5>Ahorra y prográmate libremente para que cumplas tus sueños.</h5>
-                    </div>
-                </div>
-            </div>
+              </div>
         </div>
-    </div>
+        </div>
 </div>
