User info started

--- a/front/src/app/components/welcome/welcome.component.html
+++ b/front/src/app/components/welcome/welcome.component.html
@@ -12,9 +12,8 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">Actualizar mis datos personales</h5>
-                    <a class="btn btn-primary" routerLink="/services/savings">Ver más</a>
+                    <a routerLink="/user/MyInformation" class="btn btn-primary">Ver más</a>
                 </div>
-
             </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-3">
@@ -47,7 +46,7 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">Conoce mas sobre FemSeapto</h5>
-                    <a class="btn btn-primary" routerLink="/services/savings">Ver más</a>
+                    <a href="#/Quienes-somos" class="btn btn-primary">Ver más</a>
                 </div>
             </div>
         </div>
