Whatsapp Button in home

--- a/front/src/app/components/home/home.component.html
+++ b/front/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
 <app-carousel></app-carousel>
 <app-saving-service-home></app-saving-service-home>
 <app-credit-service-home></app-credit-service-home>
+<app-whatsapp-button></app-whatsapp-button>
