Footer divider and welcome update

--- a/front/src/app/components/footer/footer.component.html
+++ b/front/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center">
+<div class="container text-center border-top">
         <footer class="mt-5">
                 <div class="row">
                         <div class="col-12 col-md">
@@ -33,7 +33,7 @@
                         </div>
                 </div>
                 <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-                        <p>&copy; {{ currentYear }} Grupo de Desarrollo SEAPTO S.A.</p> <!--Fondo de empleados de Seapto S.A. - FEMSEAPTO.-->
+                        <p>&copy; {{ currentYear }} Fondo de empleados de Seapto S.A. - FEMSEAPTO.</p> <!--Fondo de empleados de Seapto S.A. - FEMSEAPTO.-->
                         <ul class="list-unstyled d-flex footer-links">
                                 <li class="ms-3">
                                         <a class="link-body-emphasis"
