--- a/front/src/app/components/welcome/welcome.component.html
+++ b/front/src/app/components/welcome/welcome.component.html
@@ -6,7 +6,7 @@
 <div class="container mt-2 content-animate">
     <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-3">
-            <div class="card text-center">
+            <div class="card text-center h-100">
                 <div class="card-header">
                     Mi Perfil
                 </div>
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-3">
-            <div class="card text-center">
+            <div class="card text-center h-100">
                 <div class="card-header">
                     Servicios de ahorro
                 </div>
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-3">
-            <div class="card text-center">
+            <div class="card text-center h-100">
                 <div class="card-header">
                     Servicios de credito
                 </div>
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-3">
-            <div class="card text-center">
+            <div class="card text-center h-100">
                 <div class="card-header">
                     ¿Quienes Somos?
                 </div>
