--- a/front/src/app/components/home/components/credit-service-home/credit-service-home.component.html
+++ b/front/src/app/components/home/components/credit-service-home/credit-service-home.component.html
@@ -1,3 +1,13 @@
-<div class="container mt-3">
-    <p>credit-service-home works!</p>
+<div class="fondo">
+    <div class="container">
+        <div class="container d-flex justify-content-center">
+            <div class="card text-center">
+              <h1 class="card-header">Créditos</h1>
+              <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem obcaecati exercitationem voluptatibus doloremque maiores natus rerum beatae fugit earum, tempore aliquid molestiae facere ex! Velit quaerat provident ex illo dolor!</p>
+                <a class="btn" routerLink="services/credits">Conocer más</a>
+              </div>
+            </div>
+        </div>
+    </div>
 </div>
