--- a/front/src/app/components/home/components/saving-service-home/saving-service-home.component.html
+++ b/front/src/app/components/home/components/saving-service-home/saving-service-home.component.html
@@ -1,13 +1,13 @@
 <div class="fondo">
     <div class="container">
-        <div class="container pt-5 d-flex justify-content-end">
-            <div class="card">
-                <div class="card-body">
-                  <h1 class="card-title">Ahorros</h1>
-                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem obcaecati exercitationem voluptatibus doloremque maiores natus rerum beatae fugit earum, tempore aliquid molestiae facere ex! Velit quaerat provident ex illo dolor!</p>
-                  <a class="btn btn-primary" routerLink="services/savings">Conocer más</a>
-                </div>
+        <div class="container d-flex justify-content-end">
+            <div class="card text-center">
+              <h1 class="card-header">Ahorros</h1>
+              <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem obcaecati exercitationem voluptatibus doloremque maiores natus rerum beatae fugit earum, tempore aliquid molestiae facere ex! Velit quaerat provident ex illo dolor!</p>
+                <a class="btn" routerLink="services/savings">Conocer más</a>
               </div>
+            </div>
         </div>
-        </div>
+    </div>
 </div>
