--- a/front/src/app/components/whatsapp-button/whatsapp-button.component.html
+++ b/front/src/app/components/whatsapp-button/whatsapp-button.component.html
@@ -1,4 +1,13 @@
-<a href="https://api.whatsapp.com/send/?phone=573212289646" target="_blank" class="whatsapp-floating">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="whatsapp-icon" />
-</a>
+<p-speedDial 
+    class="speedDial"
+    [model]="items" 
+    showIcon="pi pi-whatsapp"
+    radius="120"
+    direction="up" 
+    type="linear" 
+    buttonClassName="p-button-success">
+</p-speedDial>
 
+<!-- <a href="https://api.whatsapp.com/send/?phone=573212289646" target="_blank" class="whatsapp-floating">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="whatsapp-icon" />
+</a> -->
