--- a/front/src/app/components/home/components/saving-service-home/saving-service-home.component.html
+++ b/front/src/app/components/home/components/saving-service-home/saving-service-home.component.html
@@ -1,13 +1,61 @@
-<div class="fondo">
-    <div class="container">
-        <div class="container d-flex justify-content-end">
-            <div class="card text-center">
-              <h1 class="card-header">Ahorros</h1>
-              <div class="card-body">
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem obcaecati exercitationem voluptatibus doloremque maiores natus rerum beatae fugit earum, tempore aliquid molestiae facere ex! Velit quaerat provident ex illo dolor!</p>
-                <a class="btn" routerLink="services/savings">Conocer más</a>
-              </div>
-            </div>
+<div class="container mt-5 mb-5">
+  <h2 class="text-center mb-3">¡Conoce nuestra línea de ahorros!</h2>
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col-md-3">
+      <a routerLink="/services/credits">
+        <div class="card h-100 shadow text-center">
+          <img src="../../../../../assets/ahorroExtraordinario.jpg" class="card-img-top" alt="...">
+          <div class="icon">
+            <i class="bi bi-house-heart-fill"></i>
+          </div>
+          <div class="card-body mt-2">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
         </div>
+      </a>
     </div>
+    <div class="col-md-3">
+      <a routerLink="/services/credits">
+        <div class="card h-100 shadow text-center">
+          <img src="../../../../../assets/ahorroExtraordinario.jpg" class="card-img-top" alt="...">
+          <div class="icon">
+            <i class="bi bi-house-heart-fill"></i>
+          </div>
+          <div class="card-body mt-2">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a short card.</p>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="col-md-3">
+      <a routerLink="/services/credits">
+        <div class="card h-100 shadow text-center">
+          <img src="../../../../../assets/ahorroExtraordinario.jpg" class="card-img-top" alt="...">
+          <div class="icon">
+            <i class="bi bi-house-heart-fill"></i>
+          </div>
+          <div class="card-body mt-2">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          </div>
+        </div>
+      </a>  
+    </div>
+    <div class="col-md-3">
+      <a routerLink="/services/credits">
+        <div class="card h-100 shadow text-center">
+          <img src="../../../../../assets/ahorroExtraordinario.jpg" class="card-img-top" alt="...">
+          <div class="icon">
+            <i class="bi bi-house-heart-fill"></i>
+          </div>
+          <div class="card-body mt-2">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
 </div>
