--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -1,11 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import "primeicons/primeicons.css";
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
-html {
-  font-family: "Inter", sans-serif !important;
-  font-size: large;
-}
+/*:root {
+  font-family: "Inter", sans-serif;
+}*/
+
 app-navbar {
   position: fixed;
   top: 0;
