--- a/front/src/app/components/whatsapp-button/whatsapp-button.component.html
+++ b/front/src/app/components/whatsapp-button/whatsapp-button.component.html
@@ -13,6 +13,7 @@
             (click)="navigate(item.url)"
             pTooltip="{{ item.tooltip }}" 
             tooltipPosition="left"
+            tooltipStyleClass="custom-tooltip"
             class="p-speeddial-action p-button-success">
         </button>
     </ng-template>
